media/radarr/ingress.yaml
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: radarr
  namespace: media
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - radarr.thuault.com
    secretName: radarr-tls
  rules:
  - host: radarr.thuault.com
    http:
      paths:
      - path: /
        backend:
          serviceName: radarr
          servicePort: 80
